--- a/src/core_plugins/kibana/public/dashboard/partials/load_dashboard.html
+++ b/src/core_plugins/kibana/public/dashboard/partials/load_dashboard.html
@@ -1,2 +1,2 @@
-<div class="kuiLocalDropdownTitle">Open Dashboard</div>
+<div class="kuiLocalDropdownTitle">打开仪表盘</div><!-- i18n Open Dashboard  -->
 <saved-object-finder type="dashboards"></saved-object-finder>
