--- a/src/core_plugins/kibana/public/dashboard/partials/options.html
+++ b/src/core_plugins/kibana/public/dashboard/partials/options.html
@@ -1,9 +1,10 @@
 <form role="form">
-  <div class="kuiLocalDropdownTitle">Options</div>
+  <div class="kuiLocalDropdownTitle">个性化</div> <!-- Options -->
   <div class="input-group">
     <label>
       <input type="checkbox" ng-model="opts.ui.darkTheme" ng-checked="opts.ui.darkTheme">
-      Use dark theme
+      <!-- Use dark theme -->
+          使用暗系主题
     </label>
   </div>
 </form>
