--- a/src/core_plugins/kibana/public/dashboard/partials/options.html
+++ b/src/core_plugins/kibana/public/dashboard/partials/options.html
@@ -1,5 +1,5 @@
 <form role="form">
-  <div class="kuiLocalDropdownTitle">个性化</div> <!-- Options -->
+  <div class="kuiLocalDropdownTitle">设置</div> <!-- Options -->
   <div class="input-group">
     <label>
       <input type="checkbox" ng-model="opts.ui.darkTheme" ng-checked="opts.ui.darkTheme">
