--- a/src/core_plugins/kibana/public/discover/partials/load_search.html
+++ b/src/core_plugins/kibana/public/discover/partials/load_search.html
@@ -1,4 +1,4 @@
 <form role="form" ng-submit="fetch()">
-  <div class="kuiLocalDropdownTitle">Open Search</div>
+  <div class="kuiLocalDropdownTitle">打开搜索条件</div> <!-- Open Search -->
   <saved-object-finder type="searches"></saved-object-finder>
 </form>
