--- a/src/core_plugins/kibana/public/discover/partials/save_search.html
+++ b/src/core_plugins/kibana/public/discover/partials/save_search.html
@@ -2,17 +2,17 @@
   role="form"
   ng-submit="opts.saveDataSource()"
 >
-  <div class="kuiLocalDropdownTitle">Save Search</div>
+  <div class="kuiLocalDropdownTitle">保存搜索</div>  <!-- Save Search -->
   <input
     class="kuiLocalDropdownInput"
     id="SaveSearch"
     ng-model="opts.savedSearch.title"
     input-focus="select"
-    placeholder="Name this search..."
+    placeholder="给搜索条件命名"
   >
 
   <saved-object-save-as-check-box saved-object="opts.savedSearch"></saved-object-save-as-check-box>
   <button ng-disabled="!opts.savedSearch.title" data-test-subj="discover-save-search-btn" type="submit" class="btn btn-primary">
-    Save
+    	保存 <!-- Save -->
   </button>
 </form>
