--- a/src/ui/public/partials/saved_object_finder.html
+++ b/src/ui/public/partials/saved_object_finder.html
@@ -20,7 +20,7 @@
       </div>
       <div class="finder-manage-object col-md-2" ng-if="!useLocalManagement">
         <a class="small" ng-click="finder.manageObjects(finder.properties.name)">
-          Manage {{finder.properties.nouns}}
+          	管理 {{finder.properties.nouns}}
         </a>
       </div>
     </div>
@@ -30,7 +30,7 @@
   <ul class="li-striped list-group list-group-menu" ng-class="{'select-mode': finder.selector.enabled}">
     <li class="list-group-item" ng-click="finder.sortHits(finder.hits)">
       <span class="paginate-heading">
-        Name
+        	名称
         <i
           class="fa"
           ng-class="finder.isAscending ? 'fa-caret-up' : 'fa-caret-down'">
