CSS change as per VOS style

--- a/src/ui/public/chrome/directives/kbn_chrome.less
+++ b/src/ui/public/chrome/directives/kbn_chrome.less
@@ -7,8 +7,9 @@ body { overflow-x: hidden; }
 .app-wrapper {
   .real-flex-parent();
   position: absolute;
-  left: @global-nav-closed-width;
-  top: 0;
+  //left: @global-nav-closed-width;
+  left: 0;
+  top: 50px;
   right: 0;
   bottom: 0;
   z-index: 1;
