--- a/src/ui/public/styles/variables/colors.less
+++ b/src/ui/public/styles/variables/colors.less
@@ -69,3 +69,5 @@
 @product-elasticsearch:                   #3EBEB0;
 @product-logstash:                        #F3BD19;
 @product-beats:                           #07A5DE;
+
+@top-menu-background:					#525A65;
