--- a/src/ui/public/chrome/directives/global_nav/global_nav.less
+++ b/src/ui/public/chrome/directives/global_nav/global_nav.less
@@ -5,31 +5,36 @@
 @global-nav-logo-height: 70px;
 
 .global-nav {
-  width: @global-nav-closed-width;
+  //width: @global-nav-closed-width;
+  width: 100%;
+  height: 50px;
   position: fixed;
   left: 0;
   top: 0;
-  bottom: 0;
-  z-index: 0;
-  background-color: @app-links-wrapper-background;
-  overflow: hidden;
+  //bottom: 0;
+  z-index: 99;
+  background-color: @top-menu-background;
+  //overflow: hidden;
 
   &.is-global-nav-open {
-    width: @global-nav-open-width;
+    //width: @global-nav-open-width;
+    width: 100%;
 
     .app-title {
       display: inline-block;
     }
 
     + .app-wrapper {
-      left: @global-nav-open-width;
+      //left: @global-nav-open-width;
     }
   }
 
   .logo-small,
   .logo {
-    height: @global-nav-logo-height;
-    width: @global-nav-open-width;
+    //height: @global-nav-logo-height;
+    height: 30px;
+    //width: @global-nav-open-width;
+    width: 50px;
     list-style-type: none;
     &.kibana {
       background-image: url("~ui/images/kibana.svg");
@@ -48,12 +53,15 @@
    * 4. Style the scrollbar to look good in Chrome and Safari.
    */
   .global-nav__links {
-    display: flex; /* 1 */
-    flex-direction: column; /* 1 */
+    display: inline-block; /* 1 */
+    z-index: 100;
+    //flex-direction: column; /* 1 */
     justify-content: space-between; /* 1 */
-    height: ~"calc(100% - @{global-nav-logo-height})"; /* 2 */
-    overflow-x: hidden; /* 3 */
-    overflow-y: auto; /* 3 */
+    //height: ~"calc(100% - @{global-nav-logo-height})"; /* 2 */
+    width: auto;
+    height: 40px;
+    //overflow-x: hidden; /* 3 */
+    //overflow-y: auto; /* 3 */
 
     &::-webkit-scrollbar { /* 4 */
       width: 16px;
