--- a/src/ui/public/chrome/directives/global_nav/global_nav_link/global_nav_link.less
+++ b/src/ui/public/chrome/directives/global_nav/global_nav_link/global_nav_link.less
@@ -2,9 +2,14 @@
 
 .global-nav-link {
   position: relative;
-  width: @global-nav-closed-width;
-  height: @app-icon-height;
-  line-height: @app-line-height;
+  //width: @global-nav-closed-width;
+  //height: @app-icon-height;
+  max-width: 150px; 
+  line-height: 30px; 
+  display: inline-block;
+  margin-left: 15px;
+  margin-right: 15px;
+  //line-height: @app-line-height;
 
   &.is-global-nav-link-disabled {
     opacity: 0.5;
@@ -16,20 +21,22 @@
 
   &:hover,
   &.active {
-    background-color: @app-links-active-background;
+    //background-color: @app-links-active-background;
 
     .global-nav-link__anchor {
-      color: @white;
+      color: #F75000;
       text-decoration: none;
+      font-weight: bold;
     }
   }
 }
 
-.is-global-nav-open {
+/* .is-global-nav-open {
   .global-nav-link {
     width: @global-nav-open-width;
   }
-}
+
+}*/
 
   .global-nav-link__anchor {
     display: block;
@@ -37,7 +44,8 @@
     color: #ebf7fa;
 
     &:focus {
-      color: @white;
+      color: @kibanaBlue1;
+      
     }
   }
 
@@ -70,12 +78,12 @@
 
   .global-nav-link__title {
     display: none;
-    width: calc(@global-nav-open-width - @global-nav-closed-width);
+    //width: calc(@global-nav-open-width - @global-nav-closed-width);
     float: right;
-    font-size: 0.9em;
-    text-align: left;
-    padding-left: 3px;
-    line-height: @app-icon-height;
+    font-size: 15px;
+    text-align: center;
+    //padding-left: 3px;
+    //line-height: @app-icon-height;
     white-space: nowrap;
 
     .is-global-nav-open & {
