--- a/src/core_plugins/kibana/public/discover/partials/no_results.html
+++ b/src/core_plugins/kibana/public/discover/partials/no_results.html
@@ -29,6 +29,7 @@
     </div>
 
     <h3>重新定义查询条件</h3> <!-- Refine your query -->
+    <p><strong>注意：</strong>只有ANALYZED字段才支持模糊查找<p>
     <!-- 
     <p>
       The search bar at the top uses Elasticsearch's support for Lucene <a href="http://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html#query-string-syntax" target="_blank">Query String syntax</a>. Let's say we're searching web server logs that have been parsed into a few fields.
