--- a/src/ui/public/chrome/directives/global_nav/global_nav.less
+++ b/src/ui/public/chrome/directives/global_nav/global_nav.less
@@ -31,17 +31,18 @@
 
   .logo-small,
   .logo {
+  	display:inline-block;
     //height: @global-nav-logo-height;
-    height: 30px;
+    height: 50px;
     //width: @global-nav-open-width;
-    width: 50px;
+    width: 150px;
     list-style-type: none;
     &.kibana {
       background-image: url("~ui/images/kibana.svg");
-      background-position: 6px 10px;
-      background-size: 140px 50px;
+      //background-position: 6px 10px;
+      background-size: 150px 50px;
       background-repeat: no-repeat;
-      background-color: #e8488b;
+      background-color: @top-menu-background;
     }
   }
 }
